root css 수정 및 scss 수정, detail meta 작성중

--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -32,7 +32,7 @@
     overflow: hidden;
     cursor: pointer;
     background: var(--category-bt-bg);
-    color: #fff;
+    color: var(--text-primary);
 
     div {
         max-width: 20rem;
