--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -16,7 +16,7 @@
         hr {
             border: none;
             width: 250px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            border-bottom: 1px solid var(--white-alpha-10);
             margin: 14px 0;
         }
     }
@@ -33,7 +33,7 @@
     display: flex;
     justify-content: flex-start;
     list-style: none;
-    color: #fff;
+    color: var(--white);
     align-items: center;
     font-size: 12px;
     font-weight: 400;
