--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -21,7 +21,6 @@
     height: 320px;
     display: flex;
     flex-direction: row;
-    background: aqua;
     background-color: var(--main-bg);
 }
 
@@ -71,7 +70,7 @@
 
 .content_detail_meta_title {
     h3 {
-        color: #fff;
+        color: var(--text-primary);
         margin: 12px 0 4px 0;
     }
 
@@ -82,7 +81,7 @@
     }
 
     p {
-        color: #fff;
+        color: var(--text-primary);
         font-family: "Roboto", "Arial", sans-serif;
         font-size: 1rem;
         line-height: 1.2rem;
@@ -101,7 +100,7 @@
 
     h3 {
         font-weight: normal;
-        color: #fff;
+        color: var(--text-primary);
         font-size: 1rem;
     }
 }
@@ -111,7 +110,7 @@
     flex-direction: row;
 
     p {
-        color: #fff;
+        color: var(--text-primary);
         font-size: 1rem;
 
         &:first-child {
