--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -52,7 +52,7 @@
 .header_logo {
     cursor: pointer;
     font-size: 24px;
-    color: #fff;
+    color: var(--logo-color);
     padding: 16px 18px 14px;
 }
 
@@ -81,7 +81,7 @@
         border: none;
         height: 30px;
         width: 500px;
-        color: #fff;
+        color: var(--header-input-color);
         background-color: var(--main-background);
         outline: none;
         padding: 2px 6px;
@@ -94,7 +94,7 @@
     align-items: center;
     width: 64px;
     height: 40px;
-    color: #eee;
+    color: var(--search-icon-color);
     border: 1px solid var(--searchbar-border-color);
     border-radius: 0 40px 40px 0;
     background: var(--searchbar-button-color);
