--- a/src/components/Header/StudioHeader.scss
+++ b/src/components/Header/StudioHeader.scss
@@ -7,7 +7,7 @@
     width: 100%;
     position: fixed;
     background-color: var(--studio-bg);
-    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 1px 4px 1px var(--black-alpha-20);
     z-index: 100;
 }
 
@@ -52,7 +52,7 @@
 .studio_header_logo {
     cursor: pointer;
     font-size: 24px;
-    color: #fff;
+    color: var(--logo-color);
     padding: 16px 18px 14px;
 }
 
@@ -67,7 +67,7 @@
     height: 40px;
     display: flex;
     align-items: center;
-    border: 1px solid #fff;
+    border: 1px solid var(--white);
     border-right: none;
     border-radius: 40px 0 0 40px;
     background-color: var(--studio-bg);
@@ -80,7 +80,7 @@
         border: none;
         height: 30px;
         width: 500px;
-        color: #fff;
+        color: var(--white);
         background-color: var(--main-background);
         outline: none;
         padding: 2px 6px;
@@ -93,7 +93,7 @@
     align-items: center;
     width: 60px;
     height: 40px;
-    color: #eee;
-    border: 1px solid #fff;
+    color: var(--search-icon-color);
+    border: 1px solid var(--white);
     border-radius: 0 40px 40px 0;
 }
