--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     flex-direction: column;
     position: fixed;
-    border-right: 1px solid rgba(255, 255, 255, 0.1);
+    border-right: 1px solid var(--white-alpha-10);
 }
 
 .studio_sidebar_profile {
@@ -39,7 +39,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        color: #fff;
+        color: var(--text-primary);
         padding-top: 14px;
     }
 
@@ -51,7 +51,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        color: #aaa;
+        color: var(--text-gray);
         padding-top: 2px;
     }
 }
@@ -73,7 +73,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            color: #aaa;
+            color: var(--text-gray);
         }
 
         &_icon {
