--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,7 +3,23 @@
     --sidebar-bt-bg: rgba(255, 255, 255, 0.1);
     --category-bt-bg: rgba(255, 255, 255, 0.1);
     --studio-bg: #282828;
-    --detail-tag-blue : #3ea6ff;
+    --bg-primary: #f1f1f1;
+    --bg-black: #0f0f0f;
+    --bg-gray: #aaa;
+    --bg-sub-blue: #3ea6ff;
+    --detail-tag-blue: #3ea6ff;
+    --search-icon-color: #eee;
     --searchbar-border-color: hsl(0, 0%, 18.82%);
     --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
+    --text-primary: #f1f1f1;
+    --text-black: #0f0f0f;
+    --text-gray: #aaa;
+    --black-alpha-20: rgba(0,0,0,0.2);
+    --white-alpha-10: rgba(255, 255, 255, 0.1);
+    --white-alpha-30: rgba(255, 255, 255, 0.3);
+    --tab-active-border: #eee;
+    --logo-color: #f1f1f1;
+    --header-input-color: #f1f1f1;
+    --white: #fff;
+    --black: #000;
 }
