comment header 구성

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -22,4 +22,7 @@
     --header-input-color: #f1f1f1;
     --white: #fff;
     --black: #000;
+
+    --comment-sort-bg: rgba(33,33,33,0.98);
+    --comment-bt-text-disabled: #717171;
 }
