--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -23,7 +23,7 @@
     }
 }
 
-.detail_content_info_container{
+.detail_content_info_container {
     margin-bottom: 24px;
 }
 
@@ -78,7 +78,6 @@
     overflow: hidden;
 
     img {
-        display: block;
         width: 100%;
         height: 100%;
         border-radius: 50%;
@@ -257,25 +256,25 @@
     }
 }
 
-.detail_content_comment_container{
+.detail_content_comment_container {
     width: 1250px;
     height: 200px;
-    background: blue;
+    // background: blue;
 }
 
-.detail_content_comment_header{
+.detail_content_comment_header {
     margin-bottom: 32px;
     display: flex;
     flex-direction: column;
 }
 
-.detail_content_comment_header_title{
+.detail_content_comment_header_title {
     margin-bottom: 24px;
     display: flex;
     flex-direction: row;
     align-items: center;
 
-    h2{
+    h2 {
         margin-right: 32px;
         color: var(--text-primary);
         font-size: 18px;
@@ -283,10 +282,160 @@
     }
 }
 
+.detail_content_comment_header_title_sort {
+    font-size: 18px;
+    color: var(--text-primary);
+    position: relative;
+
+    &_container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    &_icon {
+        margin-right: 8px;
+    }
+
+}
+
+.detail_content_comment_header_title_sort_dropdown_container {
+    display: none;
+    width: 103px;
+    position: absolute;
+    border-radius: 8px;
+    top: 35px;
+}
+
+.detail_content_comment_header_title_sort_dropdown_wrapper {
+    margin-top: 5px;
+}
+
+.detail_content_comment_header_title_sort_dropdown_list {
+    border-radius: 12px;
+    background: var(--comment-sort-bg);
+    color: var(--text-primary);
+    padding: 12px 0;
+    font-size: 14px;
+}
+
+.detail_content_comment_header_title_sort_dropdown_list_item {
+    padding: 10px 16px;
+
+    &:hover {
+        background-color: var(--white-alpha-10);
+    }
+}
+
+.detail_content_comment_header_input_box{
+    display: flex;
+    flex-direction: row;
+    word-break: break-all;
+}
+
+.detail_content_comment_header_input_thumbnail{
+    width: 40px;
+    height: 40px;
+    margin-right: 16px;
+    border-radius: 50%;
+    object-fit: cover;
+    // background-color: transparent;
+    overflow: hidden;
+
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.detail_content_comment_header_input_creation_box{
+    padding-bottom: 8px;
+    
+    input{
+        width: 1180px;
+        background: transparent;
+        border: none;
+        outline: none;
+        height: 24px;
+        border-bottom: 1px solid var(--comment-bt-text-disabled);
+        color: var(--text-primary);
+
+        &:focus{
+            border-bottom: 1px solid var(--bg-primary);
+        }
+    }
+
+    input::placeholder{
+        color: rgb(128,128,128);
+        font-size: 14px;
+    }
+}
+
+.detail_content_comment_header_input_footer_container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    visibility: hidden;
+}
+
+.detail_content_comment_header_input_footer_button_container{
+    display: flex;
+    flex-direction: row;
+}
+
+.detail_content_comment_header_input_footer_button_cancel{
+    margin-left: 8px;
+
+    button{
+        color: var(--text-primary);
+        background: var(--bg-black);
+        border: none;
+        padding: 0 16px;
+        font-size: 14px;
+        line-height: 36px;
+        border-radius: 18px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover{
+            background: var(--white-alpha-10);
+        }
+    }
+}
+
+.detail_content_comment_header_input_footer_button_submit{
+    margin-left: 8px;
+
+    button{
+        color: var(--comment-bt-text-disabled);
+        background: var(--white-alpha-10);
+        border: none;
+        padding: 0 16px;
+        font-size: 14px;
+        line-height: 36px;
+        border-radius: 18px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover{
+            color: var(--text-black);
+            background: var(--bg-sub-blue);
+        }
+    }
+}
 
 
 .detail_playlist_container {
     width: 450px;
     height: 2000px;
     background: beige;
+}
+
+
+
+// active option
+
+.sort_dropdown_list_acitve {
+    background-color: var(--white-alpha-10);
 }
