--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -99,7 +99,7 @@
 
 .profile_owner_channel_sub {
     font-size: 12px;
-    color: var(--text-gray);
+    color: var(--text-secondary);
 }
 
 .detail_content_sub_button_container {
@@ -263,7 +263,7 @@
 }
 
 .detail_content_comment_header {
-    margin-bottom: 32px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -328,13 +328,13 @@
     }
 }
 
-.detail_content_comment_header_input_box{
+.detail_content_comment_header_input_box {
     display: flex;
     flex-direction: row;
     word-break: break-all;
 }
 
-.detail_content_comment_header_input_thumbnail{
+.detail_content_comment_header_input_profile {
     width: 40px;
     height: 40px;
     margin-right: 16px;
@@ -343,16 +343,16 @@
     // background-color: transparent;
     overflow: hidden;
 
-    img{
+    img {
         width: 100%;
         height: 100%;
     }
 }
 
-.detail_content_comment_header_input_creation_box{
+.detail_content_comment_header_input_creation_box {
     padding-bottom: 8px;
-    
-    input{
+
+    input {
         width: 1180px;
         background: transparent;
         border: none;
@@ -361,33 +361,33 @@
         border-bottom: 1px solid var(--comment-bt-text-disabled);
         color: var(--text-primary);
 
-        &:focus{
+        &:focus {
             border-bottom: 1px solid var(--bg-primary);
         }
     }
 
-    input::placeholder{
-        color: rgb(128,128,128);
+    input::placeholder {
+        color: rgb(128, 128, 128);
         font-size: 14px;
     }
 }
 
-.detail_content_comment_header_input_footer_container{
+.detail_content_comment_header_input_footer_container {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     visibility: hidden;
 }
 
-.detail_content_comment_header_input_footer_button_container{
+.detail_content_comment_header_input_footer_button_container {
     display: flex;
     flex-direction: row;
 }
 
-.detail_content_comment_header_input_footer_button_cancel{
+.detail_content_comment_header_input_footer_button_cancel {
     margin-left: 8px;
 
-    button{
+    button {
         color: var(--text-primary);
         background: var(--bg-black);
         border: none;
@@ -398,16 +398,16 @@
         font-weight: 500;
         cursor: pointer;
 
-        &:hover{
+        &:hover {
             background: var(--white-alpha-10);
         }
     }
 }
 
-.detail_content_comment_header_input_footer_button_submit{
+.detail_content_comment_header_input_footer_button_submit {
     margin-left: 8px;
 
-    button{
+    button {
         color: var(--comment-bt-text-disabled);
         background: var(--white-alpha-10);
         border: none;
@@ -418,12 +418,283 @@
         font-weight: 500;
         cursor: pointer;
 
-        &:hover{
+        &:hover {
             color: var(--text-black);
             background: var(--bg-sub-blue);
         }
     }
 }
+
+.detail_content_comment_container{
+    margin-bottom: 16px;
+}
+
+.detail_content_comment_body{
+    display: flex;
+    flex-direction: row;
+}
+
+.detail_content_comment_body_profile{
+    width: 40px;
+    height: 40px;
+    margin-right: 16px;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.detail_content_comment_body_text_container{
+    display: flex;
+    flex-direction: column;
+    width: 1200px;
+}
+
+.detail_content_comment_body_text_header{
+    margin-bottom: 2px;
+}
+
+.detail_content_comment_body_text_header_author{
+    display: flex;
+    flex-direction: row;
+
+    &_title{
+        a{
+            margin-right: 4px;
+            color: var(--text-primary);
+            margin-bottom: 2px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 1.8rem;
+        }
+    }
+
+    p{
+        color: var(--text-secondary);
+        white-space: nowrap;
+        font-size: 14px;
+        line-height: 1.8rem;
+        font-weight: 400;
+
+        &:hover{
+            color: var(--text-primary);
+        }
+    }
+}
+
+.detail_content_comment_body_text_content_container{
+    display: inline-flex;
+    width: 100%;
+}
+
+.detail_content_comment_body_text_expander{
+    color: var(--text-primary);
+    display: -webkit-box;
+    overflow: hidden;
+    max-height: none;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
+
+.detail_content_comment_body_text_content{
+    color: var(--text-primary);
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: 400;
+
+    a{
+        color: var(--text-tag-blue);
+    }
+}
+
+.detail_content_comment_body_text_more{
+    margin-top: 4px;
+    
+    span{
+        color: var(--text-secondary);
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 500;
+        cursor: pointer;
+
+        &:hover{
+            // color: var(--text-primary);
+            text-decoration: underline;
+        }
+    }
+}
+
+.detail_content_comment_body_text_action_container{
+    margin-top: 4px;
+    color: var(--text-secondary);
+}
+
+.detail_content_comment_body_text_action_toolbar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 2px;
+}
+
+.detail_content_comment_body_text_action_up{
+    padding-right: 6px;
+    cursor: pointer;
+}
+
+.detail_content_comment_body_text_action_up_count{
+    margin-right: 8px;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.detail_content_comment_body_text_action_down{
+    padding-left: 6px;
+    cursor: pointer;
+}
+
+.detail_content_comment_body_text_action_reply{
+    padding-right: 6px;
+}
+
+.detail_content_comment_body_text_action_reply_box{
+    margin-left: 8px;
+
+    button{
+        padding: 0 12px;
+        height: 32px;
+        font-size: 12px;
+        border-radius: 16px;
+        cursor: pointer;
+        border: none;
+        font-weight: 500;
+        color: var(--text-primary);
+        background: transparent;
+        
+        &:hover{
+            background: var(--white-alpha-10);
+        }
+    }
+}
+
+.detail_content_comment_body_menu_box{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+
+}
+
+.detail_content_comment_body_more_button{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin-right: 20px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+    &:hover{
+        background: var(--white-alpha-10);
+        border-radius: 50%;
+    }
+}
+
+.detail_content_comment_reply_box{
+    margin-left: 56px;
+}
+
+.detail_content_comment_reply_expander_more{
+    display: flex;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_more_button_container{
+    padding: 0 16px;
+    height: 36px;
+    font-size: 14px;
+    line-height: 36px;
+    border-radius: 18px;
+
+    &:hover{
+        background: rgb(42,56,78);
+    }
+}
+
+.detail_content_comment_reply_expander_more_button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_more_button_icon{
+    margin-right: 6px;
+    margin-left: -6px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_more_button_text{
+    color: var(--text-sub-blue);
+    font-size: 14px;
+    line-height: 36px;
+    cursor: pointer;
+    font-weight: 500;
+
+}
+
+.detail_content_comment_reply_expander_less{
+    display: none;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_less_button_container{
+    padding: 0 16px;
+    height: 36px;
+    font-size: 14px;
+    line-height: 36px;
+    border-radius: 18px;
+
+    &:hover{
+        background: rgb(42,56,78);
+    }
+}
+
+.detail_content_comment_reply_expander_less_button{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_less_button_icon{
+    margin-right: 6px;
+    margin-left: -6px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.detail_content_comment_reply_expander_less_button_text{
+    color: var(--text-sub-blue);
+    font-size: 14px;
+    line-height: 36px;
+    cursor: pointer;
+    font-weight: 500;
+
+}
+
+
+
 
 
 .detail_playlist_container {
