--- a/src/components/Sidebar/StudioSidebar.scss
+++ b/src/components/Sidebar/StudioSidebar.scss
@@ -51,7 +51,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        color: var(--text-gray);
+        color: var(--text-secondary);
         padding-top: 2px;
     }
 }
@@ -73,7 +73,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            color: var(--text-gray);
+            color: var(--text-secondary);
         }
 
         &_icon {
