--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -13,7 +13,9 @@
     --searchbar-button-color: hsla(0, 0%, 100%, 0.08);
     --text-primary: #f1f1f1;
     --text-black: #0f0f0f;
-    --text-gray: #aaa;
+    --text-secondary: #aaa;
+    --text-sub-blue: #3ea6ff;
+    --text-tag-blue : #3ea6ff;
     --black-alpha-20: rgba(0,0,0,0.2);
     --white-alpha-10: rgba(255, 255, 255, 0.1);
     --white-alpha-30: rgba(255, 255, 255, 0.3);
