--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -3,7 +3,7 @@
 .detail_container {
     display: flex;
     flex-direction: row;
-    padding: 70px 20px 0;
+    padding: 84px 24px 0;
 }
 
 .detail_content_container {
@@ -11,7 +11,6 @@
     flex-direction: column;
     width: 1250px;
     height: 2000px;
-    // background: red;
     margin-right: 30px;
 }
 
@@ -425,16 +424,16 @@
     }
 }
 
-.detail_content_comment_container{
+.detail_content_comment_container {
     margin-bottom: 16px;
 }
 
-.detail_content_comment_body{
+.detail_content_comment_body {
     display: flex;
     flex-direction: row;
 }
 
-.detail_content_comment_body_profile{
+.detail_content_comment_body_profile {
     width: 40px;
     height: 40px;
     margin-right: 16px;
@@ -442,28 +441,28 @@
     object-fit: cover;
     overflow: hidden;
 
-    img{
+    img {
         width: 100%;
         height: 100%;
     }
 }
 
-.detail_content_comment_body_text_container{
+.detail_content_comment_body_text_container {
     display: flex;
     flex-direction: column;
     width: 1200px;
 }
 
-.detail_content_comment_body_text_header{
+.detail_content_comment_body_text_header {
     margin-bottom: 2px;
 }
 
-.detail_content_comment_body_text_header_author{
+.detail_content_comment_body_text_header_author {
     display: flex;
     flex-direction: row;
 
-    &_title{
-        a{
+    &_title {
+        a {
             margin-right: 4px;
             color: var(--text-primary);
             margin-bottom: 2px;
@@ -476,25 +475,25 @@
         }
     }
 
-    p{
+    p {
         color: var(--text-secondary);
         white-space: nowrap;
         font-size: 14px;
         line-height: 1.8rem;
         font-weight: 400;
 
-        &:hover{
+        &:hover {
             color: var(--text-primary);
         }
     }
 }
 
-.detail_content_comment_body_text_content_container{
+.detail_content_comment_body_text_content_container {
     display: inline-flex;
     width: 100%;
 }
 
-.detail_content_comment_body_text_expander{
+.detail_content_comment_body_text_expander {
     color: var(--text-primary);
     display: -webkit-box;
     overflow: hidden;
@@ -503,70 +502,70 @@
     -webkit-line-clamp: 4;
 }
 
-.detail_content_comment_body_text_content{
+.detail_content_comment_body_text_content {
     color: var(--text-primary);
     font-size: 14px;
     line-height: 18px;
     font-weight: 400;
 
-    a{
+    a {
         color: var(--text-tag-blue);
     }
 }
 
-.detail_content_comment_body_text_more{
+.detail_content_comment_body_text_more {
     margin-top: 4px;
-    
-    span{
+
+    span {
         color: var(--text-secondary);
         font-size: 14px;
         line-height: 18px;
         font-weight: 500;
         cursor: pointer;
 
-        &:hover{
+        &:hover {
             // color: var(--text-primary);
             text-decoration: underline;
         }
     }
 }
 
-.detail_content_comment_body_text_action_container{
+.detail_content_comment_body_text_action_container {
     margin-top: 4px;
     color: var(--text-secondary);
 }
 
-.detail_content_comment_body_text_action_toolbar{
+.detail_content_comment_body_text_action_toolbar {
     display: flex;
     flex-direction: row;
     align-items: center;
     padding-top: 2px;
 }
 
-.detail_content_comment_body_text_action_up{
+.detail_content_comment_body_text_action_up {
     padding-right: 6px;
     cursor: pointer;
 }
 
-.detail_content_comment_body_text_action_up_count{
+.detail_content_comment_body_text_action_up_count {
     margin-right: 8px;
     font-size: 14px;
     font-weight: 400;
 }
 
-.detail_content_comment_body_text_action_down{
+.detail_content_comment_body_text_action_down {
     padding-left: 6px;
     cursor: pointer;
 }
 
-.detail_content_comment_body_text_action_reply{
+.detail_content_comment_body_text_action_reply {
     padding-right: 6px;
 }
 
-.detail_content_comment_body_text_action_reply_box{
+.detail_content_comment_body_text_action_reply_box {
     margin-left: 8px;
 
-    button{
+    button {
         padding: 0 12px;
         height: 32px;
         font-size: 12px;
@@ -576,21 +575,21 @@
         font-weight: 500;
         color: var(--text-primary);
         background: transparent;
-        
-        &:hover{
+
+        &:hover {
             background: var(--white-alpha-10);
         }
     }
 }
 
-.detail_content_comment_body_menu_box{
+.detail_content_comment_body_menu_box {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
 
 }
 
-.detail_content_comment_body_more_button{
+.detail_content_comment_body_more_button {
     width: 40px;
     height: 40px;
     cursor: pointer;
@@ -599,40 +598,40 @@
     justify-content: center;
     align-items: center;
 
-    &:hover{
+    &:hover {
         background: var(--white-alpha-10);
         border-radius: 50%;
     }
 }
 
-.detail_content_comment_reply_box{
+.detail_content_comment_reply_box {
     margin-left: 56px;
 }
 
-.detail_content_comment_reply_expander_more{
+.detail_content_comment_reply_expander_more {
     display: flex;
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_more_button_container{
+.detail_content_comment_reply_expander_more_button_container {
     padding: 0 16px;
     height: 36px;
     font-size: 14px;
     line-height: 36px;
     border-radius: 18px;
 
-    &:hover{
-        background: rgb(42,56,78);
+    &:hover {
+        background: rgb(42, 56, 78);
     }
 }
 
-.detail_content_comment_reply_expander_more_button{
+.detail_content_comment_reply_expander_more_button {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_more_button_icon{
+.detail_content_comment_reply_expander_more_button_icon {
     margin-right: 6px;
     margin-left: -6px;
     width: 24px;
@@ -642,7 +641,7 @@
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_more_button_text{
+.detail_content_comment_reply_expander_more_button_text {
     color: var(--text-sub-blue);
     font-size: 14px;
     line-height: 36px;
@@ -651,30 +650,30 @@
 
 }
 
-.detail_content_comment_reply_expander_less{
+.detail_content_comment_reply_expander_less {
     display: none;
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_less_button_container{
+.detail_content_comment_reply_expander_less_button_container {
     padding: 0 16px;
     height: 36px;
     font-size: 14px;
     line-height: 36px;
     border-radius: 18px;
 
-    &:hover{
-        background: rgb(42,56,78);
+    &:hover {
+        background: rgb(42, 56, 78);
     }
 }
 
-.detail_content_comment_reply_expander_less_button{
+.detail_content_comment_reply_expander_less_button {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_less_button_icon{
+.detail_content_comment_reply_expander_less_button_icon {
     margin-right: 6px;
     margin-left: -6px;
     width: 24px;
@@ -684,7 +683,7 @@
     align-items: center;
 }
 
-.detail_content_comment_reply_expander_less_button_text{
+.detail_content_comment_reply_expander_less_button_text {
     color: var(--text-sub-blue);
     font-size: 14px;
     line-height: 36px;
@@ -695,17 +694,168 @@
 
 
 
-
-
 .detail_playlist_container {
-    width: 450px;
+    width: 392px;
     height: 2000px;
-    background: beige;
+    // background: beige;
+}
+
+.detail_playlist_box {
+    display: flex;
+    flex-direction: column;
+}
+
+.detail_playlist_tag_wrapper {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.detail_playlist_tag_left_arrow {
+    z-index: 200;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    display: flex;
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+
+    &::after {
+        background: linear-gradient(to right, var(--bg-black) 10%, rgba(24, 24, 24, 0) 90%);
+        height: 100%;
+        width: 32px;
+        content: "";
+    }
+}
+
+.detail_playlist_tag_left_arrow_button {
+    background: var(--bg-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.detail_playlist_tag_left_arrow_button_box {
+    color: var(--white);
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.left_arrow_button {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-black);
+
+    &:hover {
+        background-color: var(--white-alpha-10);
+    }
+}
+
+.detail_playlist_tag_item_container {
+    white-space: nowrap;
+    overflow: hidden;
+    // transform: translateX(-100px);
+}
+
+.detail_playlist_tag_item_box {
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.detail_playlist_tag_item {
+    margin: 8px;
+    margin-left: 0;
+    border-radius: 8px;
+    border: none;
+    color: var(--text-primary);
+    background: var(--white-alpha-10);
+    height: 32px;
+    padding: 0 12px;
+    box-sizing: border-box;
+    outline: none;
+    overflow: hidden;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+
+    &:hover{
+        background: rgb(63,63,63);
+    }
+
+    p {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+
+.detail_playlist_tag_right_arrow {
+    z-index: 200;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    display: flex;
+    // display: none;
+    flex-direction: row;
+    justify-content: center;
+
+    &::before {
+        background: linear-gradient(to left, var(--bg-black) 10%, rgba(24, 24, 24, 0) 90%);
+
+        height: 100%;
+        width: 32px;
+        content: "";
+    }
+}
+
+.detail_playlist_tag_right_arrow_button {
+    background: var(--bg-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.detail_playlist_tag_right_arrow_button_box {
+    color: var(--white);
+    padding: 0 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.right_arrow_button {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-black);
+
+    &:hover {
+        background-color: var(--white-alpha-10);
+    }
 }
 
 
 
 // active option
+
+.detail_playlist_tag_item_active{
+    background: var(--bg-primary);
+    color: var(--text-black);
+}
 
 .sort_dropdown_list_acitve {
     background-color: var(--white-alpha-10);
