carousel 기능 작성중 보류

--- a/src/components/Detail/Detail.scss
+++ b/src/components/Detail/Detail.scss
@@ -761,7 +761,10 @@
 
 .detail_playlist_tag_item_container {
     white-space: nowrap;
-    overflow: hidden;
+    // overflow: hidden;
+    width: 100%;
+      transform: translateX();
+      transition: all ease 1s;
     // transform: translateX(-100px);
 }
 
