--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -27,4 +27,11 @@
 
     --comment-sort-bg: rgba(33,33,33,0.98);
     --comment-bt-text-disabled: #717171;
+
+    --text-disabled: #717171;
+
+    --static-brand-red: #f00;
+    --static-brand-white: #fff;
+
+    ---static-overlay-background-heavy: rgba(0, 0, 0, 0.8);
 }
