--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -7,13 +7,29 @@
     padding-top: 116px;
 }
 
-.content_grid {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(4, auto);
-    background-color: var(--main-bg);
+.content_container {
+    display: flex;
+    width: 100%;
     padding: 20px;
     padding-top: 24px;
+}
+
+.content_grid_container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.content_grid_row_container{
+    width: 100%;
+    display: flex;
+}
+
+.content_grid_row_item_container{
+    margin: 0 8px 40px 8px;
+    width: 350px;
+    width: calc(100% / 4 - 16px - 0.01px);
 }
 
 .grid_container {
