[Feat]: upload setting 페이지 구현중
 - App.js: upload setting routing 추가
 - Upload.jsx: 아이콘 data 추가, image 추가시 upload setting으로 routing 추가
 - UploadSetting.jsx: 레이아웃 구현중
 - UploadSetting.scss: 레이아웃 css 구현중
 - UploadStepData.js: upload setting data 추가
 - Icon.js: upload page icon 추가
 - common.scss: root css 추가

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -37,4 +37,7 @@
     ---static-overlay-background-heavy: rgba(0, 0, 0, 0.8);
 
     --player-control-time-text: #ddd;
+
+    --setting-button-hover: rgb(50,65,82);
+    --icon-disabled: #606060;
 }
