[Feat]: Upload_setting 구현중
 - UploadSetting.jsx: uploadsetting layout 추가중
 - Icon.js: upload setting icon 추가
 - common.scss: root css 추가

--- a/src/components/Upload/UploadSetting.scss
+++ b/src/components/Upload/UploadSetting.scss
@@ -5,11 +5,6 @@
     background: #212121;
     display: flex;
     flex-direction: column;
-
-    &__header {
-        // height: 64px;
-
-    }
 }
 
 .upload_setting_title {
@@ -78,7 +73,7 @@
         flex-basis: 105px;
         min-width: 105px;
 
-        &:last-of-type .upload_setting_step_separator{
+        &:last-of-type .upload_setting_step_separator {
             display: none;
         }
 
@@ -93,7 +88,7 @@
             border: none;
             background: transparent;
 
-            &:hover{
+            &:hover {
                 border-radius: 6px;
                 background: var(--setting-button-hover);
             }
@@ -101,7 +96,7 @@
     }
 
     &_title {
-        font-family: "YouTube Sans","Roboto","Arial",sans-serif;
+        font-family: "YouTube Sans", "Roboto", "Arial", sans-serif;
         color: var(--text-sub-blue);
         font-weight: 600;
         font-size: 15px;
@@ -113,7 +108,7 @@
         margin-bottom: 2px;
     }
 
-    &_icon{
+    &_icon {
         width: 20px;
         height: 20px;
         border: 4px solid var(--text-sub-blue);
@@ -127,116 +122,328 @@
         z-index: 1;
     }
 
-    &_separator{
+    &_icon2 {
+        width: 16px;
+        height: 16px;
+        border: 4px solid var(--icon-disabled);
+        margin: 2px;
+        margin-top: 4px;
+        border-radius: 50%;
+        background-color: var(--studio-bg);
+        align-items: center;
+        display: flex;
+        flex-shrink: 0;
+        justify-content: center;
+        z-index: 1;
+    }
+
+    &_icon3 {
+        width: 20px;
+        height: 20px;
+        margin: 2px;
+        border-radius: 50%;
+        background-color: var(--text-sub-blue);
+        align-items: center;
+        display: flex;
+        flex-shrink: 0;
+        justify-content: center;
+        z-index: 1;
+    }
+
+    &_icon4 {
+        width: 20px;
+        height: 20px;
+        margin: 2px;
+        border-radius: 50%;
+        border: 1px solid var(--icon-error-red);
+        background-color: var(--studio-bg);
+        align-items: center;
+        display: flex;
+        flex-shrink: 0;
+        justify-content: center;
+        z-index: 1;
+    }
+
+    &_separator {
         height: 2px;
-    width: calc(100% + 10px);
-    min-width: 40px;
-    margin-top: 9px;
-    background-color: var(--icon-disabled);
-    flex: 1;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    pointer-events: none;
+        width: calc(100% + 10px);
+        min-width: 40px;
+        margin-top: 9px;
+        background-color: var(--icon-disabled);
+        flex: 1;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        pointer-events: none;
     }
 }
 
+.upload_setting_content_header {
+    display: flex;
+    position: relative;
+    width: 544px;
+    margin: 8px 48px 17px 48px;
 
+    h1 {
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 32px;
+        color: var(--text-primary);
+    }
 
+    button {
+        position: absolute;
+        top: 0;
+        right: 0;
+        cursor: pointer;
+        height: 36px;
+        padding: 0 8px;
+        color: var(--text-sub-blue);
+        font-size: 14px;
+        background: transparent;
+        border: none;
 
+        div {
+            padding: 8px 0;
+        }
+    }
+}
 
+.upload_setting_content_detail {
+    padding: 0 48px 24px;
+    display: flex;
+}
 
+.upload_setting_content_detail_left {
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    min-width: 536px;
+}
 
-//     &_content {
-//         height: 100%;
-//         background: aqua;
-//         background: #212121;
-//         margin-bottom: 10px;
-//         color: #fff;
-//         // flex: 1;
+.upload_setting_content_detail_left_container {
+    display: flex;
+    flex-direction: column;
+}
 
-//         &_container {
-//             display: flex;
-//             flex-direction: column;
-//             align-items: center;
-//             justify-content: center;
-//             // min-height: 370px;
-//             padding: 16px 50px 0;
-//             margin-top: 200px;
-//         }
+.upload_setting_content_detail_input_title {
+    margin-bottom: 24px;
+}
 
-//         &_icon {
-//             position: absolute;
-//             top: 43px;
-//             left: 43px;
+.upload_setting_content_detail_input_text_area {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    min-height: 81px;
+    width: 536px;
+    position: relative;
+}
 
-//             &_box {
-//                 width: 136px;
-//                 height: 136px;
-//                 border-radius: 50%;
-//                 background: rgba(15, 15, 15, 0.5);
-//                 position: relative;
-//             }
+.area-detail {
+    min-height: 165px;
 
-//         }
+}
 
-//         &_title_container {
-//             margin-top: 23px;
-//             font-size: 15px;
-//             line-height: 24px;
-//         }
+.upload_setting_content_detail_input_outer {
+    padding: 0 12px 11px;
+    border: 1px solid var(--white-alpha-30);
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: flex;
+    // flex: 1 1 auto;
+    flex-direction: column;
+    overflow: hidden;
+}
 
-//         &_subtitle_container {
-//             margin-top: 2px;
-//             font-size: 13px;
-//             color: #aaa;
-//             line-height: 20px;
-//         }
+.upload_setting_content_detail_input_label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    margin-top: 8px;
+    margin-bottom: 3px;
+    position: relative;
+    color: var(--text-secondary);
+}
 
-//         &_button {
-//             display: flex;
-//             color: #0d0d0d;
-//             background: #3ea6ff;
-//             padding: 0 8px;
-//             padding-left: 16px;
-//             padding-right: 16px;
-//             border-radius: 2px;
-//             height: 36px;
-//             text-align: center;
-//             align-items: center;
-//             font-size: 14px;
-//             line-height: 20px;
-//             cursor: pointer;
+.upload_setting_content_detail_input_help_icon {
+    display: inline-block;
+    margin-left: 8px;
+    position: absolute;
+    top: -3px;
+    vertical-align: middle;
+}
 
-//             &_container {
-//                 margin-top: 26px;
-//                 margin-bottom: 200px;
-//             }
-//         }
+.upload_setting_content_detail_input_text_area_box {
+    font-size: 15px;
+    line-height: 24px;
+    flex: 1;
+    display: inline-block;
+    white-space: pre-wrap;
+    vertical-align: top;
+    width: 100%;
+    min-height: 29px;
+    height: 100%;
+    padding-top: 0px;
+    padding-bottom: 1px;
+    margin-bottom: 0;
+    color: var(--text-primary);
+    resize: none;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    overflow-x: hidden;
+    overflow-y: auto;
+    // -webkit-user-modify: read-write;
+    // overflow-wrap: break-word;
+    // -webkit-line-break: after-white-space;
+}
 
-//         &_info_container {
-//             font-family: "Roboto", "Noto", sans-serif;
-//             font-weight: 400;
-//             -webkit-font-smoothing: antialiased;
-//             letter-spacing: 0.011em;
-//             font-size: 12px;
-//             line-height: 16px;
-//             color: #aaa;
-//             text-align: center;
-//             line-height: 24px;
-//         }
+.text_area_detail {
+    min-height: 113px;
+}
 
-//         &_subinfo_container {
-//             font-family: "Roboto", "Noto", sans-serif;
-//             font-weight: 400;
-//             -webkit-font-smoothing: antialiased;
-//             letter-spacing: 0.011em;
-//             font-size: 12px;
-//             line-height: 16px;
-//             color: #aaa;
-//             text-align: center;
-//             line-height: 24px;
-//             margin-bottom: 4px;
-//         }
-//     }
-// }
+.upload_setting_content_detail_input_bottom {
+    display: flex;
+    flex-direction: column;
+}
+
+.upload_setting_content_detail_input_char_count {
+    font-size: 12px;
+    line-height: 16px;
+    align-self: flex-end;
+    color: var(--text-secondary);
+    display: block;
+    text-align: right;
+    // visibility: hidden;
+}
+
+.upload_setting_content_detail_thumbnail {
+    margin-bottom: 24px;
+}
+
+.upload_setting_content_detail_thumbnail_container {
+    display: flex;
+    flex-direction: column;
+    width: 536px;
+}
+
+.upload_setting_content_detail_thumbnail_title {
+    font-size: 15px;
+    line-height: 24px;
+    color: var(--text-primary);
+    padding-bottom: 8px;
+}
+
+.upload_setting_content_detail_thumbnail_sub_label {
+    font-size: 13px;
+    line-height: 20px;
+    color: var(--text-secondary);
+    padding-bottom: 8px;
+
+    a {
+        padding-left: 5px;
+        color: var(--text-sub-blue);
+    }
+}
+
+.upload_setting_content_detail_thumbnail_list_container {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+}
+
+.upload_setting_content_detail_thumbnail_image_upload {
+    margin-right: 4px;
+    display: flex;
+    width: 131px;
+    height: 74px;
+}
+
+.upload_setting_content_detail_thumbnail_image_upload_inner {
+    display: flex;
+    align-items: center;
+    width: 129px;
+    height: 70px;
+    border: 1px dashed var(--white-alpha-10);
+    border-radius: 2px;
+    margin-left: 2px;
+    margin-top: 2px;
+
+    button {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        padding: 0 8px;
+        font-size: 12px;
+        line-height: 16px;
+        cursor: pointer;
+        color: var(--text-secondary);
+        outline: none;
+        background: transparent;
+        border: none;
+
+        #tooltip_icon {
+            display: inline-block;
+            margin: 0;
+            position: absolute;
+            right: 8px;
+            top: 8px;
+        }
+
+        #add_photo_icon {
+            margin: 4px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            vertical-align: middle;
+        }
+
+        span {
+            font-size: 12px;
+            line-height: 16px;
+            cursor: pointer;
+            color: var(--text-secondary);
+        }
+    }
+}
+
+.upload_setting_content_detail_thumbnail_list_cell {
+    margin-right: 4px;
+    display: flex;
+    width: 131px;
+    height: 74px;
+
+    button {
+        background: none;
+        border: none;
+        color: inherit;
+        font: inherit;
+        letter-spacing: inherit;
+        margin: 0;
+        padding: 0;
+
+        #image_outer {
+            opacity: 0.5;
+            border: 2px solid transparent;
+            width: 131px;
+            height: 74px;
+
+            #image_inner {
+                border-radius: 2px;
+                background: #0d0d0d;
+
+                img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
