--- a/src/components/Categorybar/Categorybar.scss
+++ b/src/components/Categorybar/Categorybar.scss
@@ -1,28 +1,22 @@
 @import '../../styles/common.scss';
 
-.category {
+
+wt-chips {
     position: fixed;
     width: 85.3972%;
     height: 56px;
     background-color: var(--main-bg);
     margin: 60px 0 0 250px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     z-index: 100;
 
-    &_container {
+    #container {
         width: 70%;
-        display: flex;
-        align-items: center;
         height: 56px;
     }
+
 }
 
-.category_item_container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+wt-chips-wrapper {
     white-space: nowrap;
     font-size: 0.8rem;
     margin: 8px;
@@ -34,11 +28,17 @@
     background: var(--category-bt-bg);
     color: var(--text-primary);
 
-    div {
+    .wt-chips-wrapper {
         max-width: 20rem;
         display: block;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
     }
+}
+
+.wt-chips {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
