--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 @import '../../styles/common.scss';
 
-.header {
+wt-head {
     display: flex;
     height: 60px;
     justify-content: center;
@@ -8,66 +8,40 @@
     position: fixed;
     background-color: var(--main-bg);
     z-index: 100;
-}
 
-.header_container {
-    width: 100%;
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 16px;
-    box-sizing: border-box;
-}
-
-.header {
-    &_left {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    }
-
-    &_center {
-        display: flex;
-        flex-direction: row;
-    }
-
-    &_right {
-        display: flex;
-        width: 260px;
-        flex-direction: row;
+    #container {
+        width: 100%;
+        height: 60px;
         justify-content: space-between;
-        align-items: center;
+        padding: 0 16px;
+        box-sizing: border-box;
+    }
+
+    #center {
+        align-items: baseline;
+    }
+
+    #right {
+        width: 260px;
+        justify-content: space-between;
+    }
+
+    #nav-button {
+        cursor: pointer;
+        padding: 8px;
     }
 }
 
-.header_nav_button {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    padding: 8px;
-}
-
-.header_logo {
+wt-logo {
     cursor: pointer;
     font-size: 24px;
     color: var(--logo-color);
     padding: 16px 18px 14px;
 }
 
-
-.search_box {
+wt-searchbox#search.wt-head {
     height: 40px;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
-}
-
-.search_container {
-    height: 40px;
-    display: flex;
-    align-items: center;
     border: 1px solid var(--searchbar-border-color);
     border-right: none;
     border-radius: 40px 0 0 40px;
@@ -88,17 +62,20 @@
     }
 }
 
-.search_icon {
-    display: flex;
+wt-icon-button#search-icon {
     justify-content: center;
-    align-items: center;
     width: 64px;
     height: 40px;
     color: var(--search-icon-color);
     border: 1px solid var(--searchbar-border-color);
     border-radius: 0 40px 40px 0;
     background: var(--searchbar-button-color);
+}
 
+.wt-head {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 input::-webkit-input-placeholder {
